changed ghcr.io build step name

--- a/.github/workflows/docker-builds.yml
+++ b/.github/workflows/docker-builds.yml
@@ -8,7 +8,7 @@ env:
   JCHEMWS_IMAGE: quanted/jchemws
 
 jobs:
-  build-ctsws:
+  build-jchemws:
     runs-on: ubuntu-latest
     permissions:
       contents: read
