another docker image fix for getting jchemws running

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
   # Jchem Webservices (legacy)
   jchemws:
     restart: unless-stopped
+    # build:
+    #   context: .
+    #   dockerfile: Dockerfile
     image: ${JCHEMWS_IMAGE}
     container_name: jchemws
     # expose:
